# library-django

./: pyproject.toml  requirements.txt
borrow/: models.py  serializers.py  tests.py  urls.py  views.py
borrow/migrations/: 0001_initial.py  0002_alter_borrow_expired_at.py  0003_alter_borrow_book_alter_borrow_status.py
catalog/: models.py  tests.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_book_publisher_alter_book_genre_alter_book_id.py
renting/: models.py
renting/migrations/: 0001_initial.py
user/: models.py  serializers.py  urls.py  views.py
user/migrations/: 0001_initial.py
